--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
 				<div class="slider-item">
 					<div class="img-wrapper">
 						<h3 class="edit-big">
-							<a href="#">
+							<a href="page-of-product.html">
 								<img src="images/big-pan.png" alt="edit pan">
 							</a>
 						</h3>
@@ -339,7 +339,7 @@
 				<div class="slider-item">
 					<div class="img-wrapper">
 						<h3 class="edit-big">
-							<a href="#">
+							<a href="page-of-product.html">
 								<img src="images/big-pan.png" alt="edit pan">
 							</a>
 						</h3>
@@ -369,7 +369,7 @@
 				<div class="slider-item">
 					<div class="img-wrapper">
 						<h3 class="edit-big">
-							<a href="#">
+							<a href="page-of-product.html">
 								<img src="images/big-pan.png" alt="edit pan">
 							</a>
 						</h3>
@@ -399,7 +399,7 @@
 				<div class="slider-item">
 					<div class="img-wrapper">
 						<h3 class="edit-big">
-							<a href="#">
+							<a href="page-of-product.html">
 								<img src="images/big-pan.png" alt="edit pan">
 							</a>
 						</h3>
@@ -429,7 +429,7 @@
 				<div class="slider-item">
 					<div class="img-wrapper">
 						<h3 class="edit-big">
-							<a href="#">
+							<a href="page-of-product.html">
 								<img src="images/big-pan.png" alt="edit pan">
 							</a>
 						</h3>
@@ -459,7 +459,7 @@
 				<div class="slider-item">
 					<div class="img-wrapper">
 						<h3 class="edit-big">
-							<a href="#">
+							<a href="page-of-product.html">
 								<img src="images/big-pan.png" alt="edit pan">
 							</a>
 						</h3>
@@ -493,7 +493,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -511,7 +511,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -529,7 +529,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -547,7 +547,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -565,7 +565,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -583,7 +583,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
