--- a/list-of-products.html
+++ b/list-of-products.html
@@ -286,7 +286,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -304,7 +304,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -322,7 +322,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -340,7 +340,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -358,7 +358,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -376,7 +376,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -394,7 +394,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -412,7 +412,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -430,7 +430,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -448,7 +448,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -466,7 +466,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
@@ -484,7 +484,7 @@
 						<li>
 							<div class="img-wrapper">
 								<h3 class="edit-big">
-									<a href="#">
+									<a href="page-of-product.html">
 										<img src="images/big-pan.png" alt="edit pan">
 									</a>
 								</h3>
